template tag for translatable alerts with links

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -14,7 +14,8 @@
 
 {% if part.variant_of %}
 <div class='alert alert-info alert-block'>
-    {% trans "This part is a variant of" %} <strong><a href="{% url 'part-variants' part.variant_of.id %}">{{ part.variant_of.full_name }}</a></strong>
+    {% object_link 'part-variants' part.variant_of.id part.variant_of.full_name as link %}
+    {% blocktrans %}This part is a variant of {{ link }}{% endblocktrans %}
 </div>
 {% endif %}
 
