--- a/InvenTree/order/templates/order/order_wizard/select_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/select_parts.html
@@ -54,7 +54,7 @@
                         </select>
                     </div>
                     {% if not part.order_supplier %}
-                    <span class='help-inline'>{% trans "Select a supplier for" %} <i>{{ part.name }}</i></span>
+                    <span class='help-inline'>{% blocktrans %}Select a supplier for <i>{{ part.name }}</i>{% endblocktrans %}</span>
                     {% endif %}
                 </div>
             </td>
