--- a/InvenTree/part/templates/part/category_delete.html
+++ b/InvenTree/part/templates/part/category_delete.html
@@ -5,7 +5,7 @@
 {% trans 'Are you sure you want to delete category' %} <strong>{{ category.name }}</strong>?
 
 {% if category.children.all|length > 0 %}
-<p>{% trans 'This category contains' %} {{ category.children.all|length }} {% trans 'child categories' %}.<br>
+<p>{% blocktrans %}This category contains {{ category.children.all|length }} child categories{% endblocktrans %}.<br>
 {% trans 'If this category is deleted, these child categories will be moved to the' %}
 {% if category.parent %}
  <strong>{{ category.parent.name }}</strong> {% trans 'category' %}.
@@ -22,9 +22,9 @@
 {% endif %}
 
 {% if category.parts.all|length > 0 %}
-<p>{% trans 'This category contains' %} {{ category.parts.all|length }} {% trans 'parts' %}.<br>
+<p>{% blocktrans %}This category contains {{ category.parts.all|length }} parts{% endblocktrans %}.<br>
     {% if category.parent %}
-    {% trans 'If this category is deleted, these parts will be moved to the parent category' %} {{ category.parent.pathstring }}
+    {% blocktrans %}If this category is deleted, these parts will be moved to the parent category {{ category.parent.pathstring }}{% endblocktrans %}
     {% else %}
     {% trans 'If this category is deleted, these parts will be moved to the top-level category Teile' %}
     {% endif %}
