--- a/InvenTree/part/templates/part/stock.html
+++ b/InvenTree/part/templates/part/stock.html
@@ -13,7 +13,7 @@
 {% block details %}
 {% if part.is_template %}
 <div class='alert alert-info alert-block'>
-    {% trans 'Showing stock for all variants of' %} <i>{{ part.full_name }}</i>
+    {% blocktrans %}Showing stock for all variants of <i>{{ part.full_name }}</i>{% endblocktrans %}
 </div>
 {% endif %}
 
