--- a/InvenTree/part/templates/part/variant_part.html
+++ b/InvenTree/part/templates/part/variant_part.html
@@ -7,7 +7,7 @@
 
 <div class='alert alert-info alert-block'>
     <b>{% trans "Create new part variant" %}</b><br>
-    {% trans "Create a new variant of template" %} <i>'{{ part.full_name }}'</i>.
+    {% blocktrans %}Create a new variant of template <i>'{{ part.full_name }}'</i>.{% endblocktrans %}
 </div>
 
 {% endblock %}
