--- a/InvenTree/stock/templates/stock/stockitem_convert.html
+++ b/InvenTree/stock/templates/stock/stockitem_convert.html
@@ -5,8 +5,8 @@
 
 <div class='alert alert-block alert-info'>
     <b>{% trans "Convert Stock Item" %}</b><br>
-    {% trans "This stock item is current an instance of " %}<i>{{ item.part }}</i><br>
-    {% trans "It can be converted to one of the part variants listed below." %}
+    {% blocktrans %}This stock item is current an instance of <i>{{ item.part }}</i>{% endblocktrans %}<br>
+    {% blocktrans %}It can be converted to one of the part variants listed below.{% endblocktrans %}
 </div>
 
 <div class='alert alert-block alert-warning'>
