--- a/InvenTree/part/templates/part/copy_part.html
+++ b/InvenTree/part/templates/part/copy_part.html
@@ -7,7 +7,7 @@
 
 <div class='alert alert-info alert-block'>
     <strong>{% trans 'Duplicate Part' %}</strong><br>
-    {% blocktrans %}Make a copy of part '{{ part.full_name }}'.{% endblocktrans %}
+    {% blocktrans with full_name =part.full_name %}Make a copy of part '{{full_name}}'.{% endblocktrans %}
 </div>
 
 {% if matches %}
