--- a/InvenTree/part/templates/part/stock.html
+++ b/InvenTree/part/templates/part/stock.html
@@ -13,7 +13,7 @@
 {% block details %}
 {% if part.is_template %}
 <div class='alert alert-info alert-block'>
-    {% blocktrans %}Showing stock for all variants of <i>{{ part.full_name }}</i>{% endblocktrans %}
+    {% blocktrans with full_name=part.full_name%}Showing stock for all variants of <i>{{full_name}}</i>{% endblocktrans %}
 </div>
 {% endif %}
 
