--- a/InvenTree/order/templates/order/receive_parts.html
+++ b/InvenTree/order/templates/order/receive_parts.html
@@ -5,7 +5,7 @@
 
 {% block form %}
 
-{% blocktrans %}Receive outstanding parts for <b>{{ order }}</b> - <i>{{ order.description }}</i>{% endblocktrans %}
+{% blocktrans with desc=order.description %}Receive outstanding parts for <b>{{order}}</b> - <i>{{desc}}</i>{% endblocktrans %}
 
 <form method='post' action='' class='js-modal-form' enctype='multipart/form-data'>
     {% csrf_token %}
