--- a/InvenTree/part/templates/part/variant_part.html
+++ b/InvenTree/part/templates/part/variant_part.html
@@ -7,7 +7,7 @@
 
 <div class='alert alert-info alert-block'>
     <b>{% trans "Create new part variant" %}</b><br>
-    {% blocktrans %}Create a new variant of template <i>'{{ part.full_name }}'</i>.{% endblocktrans %}
+    {% blocktrans with full_name=part.full_name %}Create a new variant of template <i>'{{full_name}}'</i>.{% endblocktrans %}
 </div>
 
 {% endblock %}
