--- a/InvenTree/stock/templates/stock/item_delete.html
+++ b/InvenTree/stock/templates/stock/item_delete.html
@@ -8,8 +8,8 @@
 <div class='alert alert-danger alert-block'>
 {% trans "Are you sure you want to delete this stock item?" %}
 <br>
-{% define decimal item.quantity as qty %}
-{% blocktrans %}This will remove <b>{{ qty }}</b> units of <b>{{ item.part.full_name }}</b> from stock.{% endblocktrans %}
+{% decimal item.quantity as qty %}
+{% blocktrans with full_name=item.part.full_name %}This will remove <b>{{qty}}</b> units of <b>{{full_name}}</b> from stock.{% endblocktrans %}
 </div>
 
 {% endblock %}
