Stock return to customer fix, stock children item table fix

--- a/InvenTree/stock/templates/stock/item_childs.html
+++ b/InvenTree/stock/templates/stock/item_childs.html
@@ -30,7 +30,7 @@
 loadStockTable($("#stock-table"), {
     params: {
         location_detail: true,
-        part_details: true,
+        part_detail: false,
         ancestor: {{ item.id }},
     },
     name: 'item-childs',
