--- a/InvenTree/templates/two_column.html
+++ b/InvenTree/templates/two_column.html
@@ -9,8 +9,12 @@
 
 {% block content %}
 
+{% block header_panel %}
 <div class='panel panel-default panel-inventree'>
     
+    {% block header_pre_content %}
+    {% endblock %}
+
     <div class='row'>
         <div class='col-sm-6'>
             <div class='media-left'>
@@ -30,7 +34,12 @@
             {% endblock %}
         </div>
     </div>
+
+    {% block header_post_content %}
+    {% endblock %}
+
 </div>
+{% endblock %}
 
 {% block content_panels %}
 <div class='panel panel-default panel-inventree'>
