--- a/InvenTree/stock/templates/stock/sublocation.html
+++ b/InvenTree/stock/templates/stock/sublocation.html
@@ -15,7 +15,16 @@
     <div class='panel-heading'>
         <h4>{% trans "Sublocations" %}</h4>
     </div>
-    <table class='table table-striped table-condensed' id='sublocation-table'></table>
+
+    <div id='button-toolbar'>
+        <div class='button-toolbar container-fluid' style='float: right;'>
+        
+        </div>
+        <div class='filter-list' id='filter-list-location'>
+            <!-- An empty div in which the filter list will be constructed -->
+        </div>
+    </div>
+    <table class='table table-striped table-condensed' data-toolbar='#button-toolbar' id='sublocation-table'></table>
 </div>
 
 {% endblock %}
