Enable printing of multiple stock location labels

--- a/InvenTree/templates/stock_table.html
+++ b/InvenTree/templates/stock_table.html
@@ -32,6 +32,7 @@
                 </ul>
             </div>
             {% endif %}
+            <!-- Printing actions menu -->
             <div class='btn-group'>
                 <button id='stock-print-options' class='btn btn-primary dropdown-toggle' type='button' data-toggle="dropdown" title='{% trans "Printing Actions" %}'>
                     <span class='fas fa-print'></span> <span class='caret'></span>
