Adds some more translatable strings
- Mostly just to check the workflow integration

--- a/InvenTree/templates/about.html
+++ b/InvenTree/templates/about.html
@@ -60,7 +60,7 @@
                             </tr>
                             <tr>
                                 <td><span class='fas fa-mobile-alt'></span></td>
-                                <td>{% trans "Get the App" %}</td>
+                                <td>{% trans "Mobile App" %}</td>
                                 <td><a href="https://inventree.readthedocs.io/en/latest/app/app">https://inventree.readthedocs.io/en/latest/app/app</a></td>
                             </tr>
                             <tr>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class='modal-footer'>
-                <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
+                <button type='button' class='btn btn-default' data-dismiss='modal'>{% trans "Close" %}</button>
             </div>
         </div>
     </div>
