--- a/InvenTree/templates/InvenTree/settings/theme.html
+++ b/InvenTree/templates/InvenTree/settings/theme.html
@@ -16,7 +16,7 @@
     <div class='col-sm-6'>
         <h4>{% trans "Color Themes" %}</h4>
     </div>
-</div>    
+</div>
 
 <form action="{% url 'settings-theme' %}" method="post">
     {% csrf_token %}
@@ -32,5 +32,36 @@
     {% endblocktrans %}
     </div>
 {% endif %}
+
+
+<div class='row'>
+    <div class='col-sm-6'>
+        <h4>{% trans "Language" %}</h4>
+    </div>
+</div>
+
+
+
+<div class="row">
+    <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+        <input name="next" type="hidden" value="">
+        <div class="col-sm-6" style="width: 200px;"><div id="div_id_name" class="form-group"><div class="controls ">
+            <select name="language" class="select form-control">
+                {% get_current_language as LANGUAGE_CODE %}
+                {% get_available_languages as LANGUAGES %}
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                    <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                        {{ language.name_local }} ({{ language.code }})
+                    </option>
+                {% endfor %}
+            </select>
+        </div></div></div>
+        <div class="col-sm-6" style="width: auto;">
+            <input type="submit" value="{% trans 'Set Language' %}" class="btn btn btn-primary">
+        </div>
+    </form>
+</div>
+
 
 {% endblock %}
