--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -171,10 +171,34 @@ $("#edit-order").click(function() {
     );
 });
 
+$("#receive-order").click(function() {
+    launchModalForm("{% url 'po-receive' order.id %}", {
+        reload: true,
+        secondary: [
+            {
+                field: 'location',
+                label: '{% trans "New Location" %}',
+                title: '{% trans "Create new stock location" %}',
+                url: "{% url 'stock-location-create' %}",
+            },
+        ]
+    });
+});
+
+$("#complete-order").click(function() {
+    launchModalForm("{% url 'po-complete' order.id %}", {
+        reload: true,
+    });
+});
+
 $("#cancel-order").click(function() {
     launchModalForm("{% url 'po-cancel' order.id %}", {
         reload: true,
     });
+});
+
+$("#export-order").click(function() {
+    location.href = "{% url 'po-export' order.id %}";
 });
 
 
