Link for credits in UI and README Closes #1533

--- a/InvenTree/templates/about.html
+++ b/InvenTree/templates/about.html
@@ -59,6 +59,11 @@
                                 <td><a href="{% inventree_github_url %}">{% inventree_github_url %}</a></td>
                             </tr>
                             <tr>
+                                <td><span class='fas fa-balance-scale'></span></td>
+                                <td>{% trans "Credits" %}</td>
+                                <td><a href="{% inventree_credits_url %}">{% inventree_credits_url %}</a></td>
+                            </tr>
+                            <tr>
                                 <td><span class='fas fa-mobile-alt'></span></td>
                                 <td>{% trans "Mobile App" %}</td>
                                 <td><a href="https://inventree.readthedocs.io/en/latest/app/app">https://inventree.readthedocs.io/en/latest/app/app</a></td>
