--- a/InvenTree/order/templates/order/po_navbar.html
+++ b/InvenTree/order/templates/order/po_navbar.html
@@ -14,6 +14,12 @@
             {% trans "Details" %}
         </a>
     </li>
+    <li class='list-group-item {% if tab == "upload" %}active{% endif %}' title='{% trans "Upload File" %}'>
+        <a href='{% url "po-upload" order.id %}'>
+            <span class='fas fa-file-upload'></span>
+            {% trans "Upload File" %}
+        </a>
+    </li>
     <li class='list-group-item {% if tab == "received" %}active{% endif %}' title='{% trans "Received Stock Items" %}'>
         <a href='{% url "po-received" order.id %}'>
             <span class='fas fa-sign-in-alt'></span>
