--- a/InvenTree/order/templates/order/order_wizard/match_fields.html
+++ b/InvenTree/order/templates/order/order_wizard/match_fields.html
@@ -3,8 +3,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block form %}
-
+{% block form_alert %}
 {% if missing_columns and missing_columns|length > 0 %}
 <div class='alert alert-danger alert-block' role='alert'>
     {% trans "Missing selections for the following required columns" %}:
@@ -16,74 +15,72 @@
     </ul>
 </div>
 {% endif %}
+{% endblock form_alert %}
 
-<form method="post" action='' class='js-modal-form' enctype="multipart/form-data">
-    {% csrf_token %}
-    {% load crispy_forms_tags %}
-    {{ wizard.management_form }}
-
+{% block form_buttons_top %}
     {% if wizard.steps.prev %}
     <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="save btn btn-default">{% trans "Previous Step" %}</button>
     {% endif %}
     <button type="submit" class="save btn btn-default">{% trans "Submit Selections" %}</button>
+{% endblock form_buttons_top %}
 
-    <table class='table table-striped' style='margin-top: 12px'>
-        <thead>
-            <tr>
-                <th></th>
-                <th>{% trans "File Fields" %}</th>
-                {% for col in columns %}
-                <th>
-                    <div>
-                        <input type='hidden' name='col_name_{{ forloop.counter0 }}' value='{{ col.name }}'/>
-                        {{ col.name }}
-                        <button class='btn btn-default btn-remove' onClick='removeColFromBomWizard()' id='del_col_{{ forloop.counter0 }}' style='display: inline; float: right;' title='{% trans "Remove column" %}'>
-                            <span col_id='{{ forloop.counter0 }}' class='fas fa-trash-alt icon-red'></span>
-                        </button>
-                    </div>
-                </th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td></td>
-                <td>{% trans "Match Fields" %}</td>
-                {% for col in columns %}
-                <td>
-                    <select class='select' id='id_col_{{ forloop.counter0 }}' name='col_guess_{{ forloop.counter0 }}'>
-                            <option value=''>---------</option>
-                            {% for req in headers %}
-                            <option value='{{ req }}'{% if req == col.guess %}selected='selected'{% endif %}>{{ req }}</option>
-                            {% endfor %}
-                    </select>
-                    {% if col.duplicate %}
-                    <p class='help-inline'>{% trans "Duplicate column selection" %}</p>
-                    {% endif %}
-                </td>
-                {% endfor %}
-            </tr>
-            {% for row in rows %}
-            {% with forloop.counter as row_index %}
-            <tr>
-                <td>
-                    <button class='btn btn-default btn-remove' onClick='removeRowFromBomWizard()' id='del_row_{{ row_index }}' style='display: inline; float: right;' title='{% trans "Remove row" %}'>
-                        <span row_id='{{ row_index }}' class='fas fa-trash-alt icon-red'></span>
+{% block form_content %}
+    {{ wizard.form }}
+    <thead>
+        <tr>
+            <th></th>
+            <th>{% trans "File Fields" %}</th>
+            {% for col in columns %}
+            <th>
+                <div>
+                    <input type='hidden' name='col_name_{{ forloop.counter0 }}' value='{{ col.name }}'/>
+                    {{ col.name }}
+                    <button class='btn btn-default btn-remove' onClick='removeColFromBomWizard()' id='del_col_{{ forloop.counter0 }}' style='display: inline; float: right;' title='{% trans "Remove column" %}'>
+                        <span col_id='{{ forloop.counter0 }}' class='fas fa-trash-alt icon-red'></span>
                     </button>
-                </td>
-                <td>{{ row_index }}</td>
-                {% for item in row.data %}
-                <td>
-                    <input type='hidden' name='row_{{ row_index }}_col_{{ forloop.counter0 }}' value='{{ item }}'/>
-                    {{ item }}
-                </td>
-                {% endfor %}
-            </tr>
-            {% endwith %}
+                </div>
+            </th>
             {% endfor %}
-        </tbody>
-    </table>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+            <td>{% trans "Match Fields" %}</td>
+            {% for col in columns %}
+            <td>
+                <select class='select' id='id_col_{{ forloop.counter0 }}' name='col_guess_{{ forloop.counter0 }}'>
+                        <option value=''>---------</option>
+                        {% for req in headers %}
+                        <option value='{{ req }}'{% if req == col.guess %}selected='selected'{% endif %}>{{ req }}</option>
+                        {% endfor %}
+                </select>
+                {% if col.duplicate %}
+                <p class='help-inline'>{% trans "Duplicate column selection" %}</p>
+                {% endif %}
+            </td>
+            {% endfor %}
+        </tr>
+        {% for row in rows %}
+        {% with forloop.counter as row_index %}
+        <tr>
+            <td>
+                <button class='btn btn-default btn-remove' onClick='removeRowFromBomWizard()' id='del_row_{{ row_index }}' style='display: inline; float: right;' title='{% trans "Remove row" %}'>
+                    <span row_id='{{ row_index }}' class='fas fa-trash-alt icon-red'></span>
+                </button>
+            </td>
+            <td>{{ row_index }}</td>
+            {% for item in row.data %}
+            <td>
+                <input type='hidden' name='row_{{ row_index }}_col_{{ forloop.counter0 }}' value='{{ item }}'/>
+                {{ item }}
+            </td>
+            {% endfor %}
+        </tr>
+        {% endwith %}
+        {% endfor %}
+    </tbody>
+{% endblock form_content %}
 
-</form>
-
-{% endblock %}
+{% block form_buttons_bottom %}
+{% endblock form_buttons_bottom %}
