--- a/InvenTree/order/templates/order/order_wizard/match_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/match_parts.html
@@ -12,9 +12,9 @@
 {% endblock form_alert %}
 
 {% block form_buttons_top %}
-    {% if wizard.steps.prev %}
+    {% comment %} {% if wizard.steps.prev %}
     <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="save btn btn-default">{% trans "Previous Step" %}</button>
-    {% endif %}
+    {% endif %} {% endcomment %}
     <button type="submit" class="save btn btn-default">{% trans "Submit Selections" %}</button>
 {% endblock form_buttons_top %}
 
@@ -25,7 +25,7 @@
                 <th></th>
                 <th>{% trans "Row" %}</th>
                 <th>{% trans "Select Part" %}</th>
-                {% for col in bom_columns %}
+                {% for col in columns %}
                 <th>
                     <input type='hidden' name='col_name_{{ forloop.counter0 }}' value='{{ col.name }}'/>
                     <input type='hidden' name='col_guess_{{ forloop.counter0 }}' value='{{ col.guess }}'/>
@@ -39,7 +39,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for row in bom_rows %}
+            {% for row in rows %}
             <tr {% if row.errors %} style='background: #ffeaea;'{% endif %} part-name='{{ row.part_name }}' part-description='{{ row.description }}' part-select='#select_part_{{ row.index }}'>
                 <td>
                     <button class='btn btn-default btn-remove' onClick='removeRowFromBomWizard()' id='del_row_{{ forloop.counter }}' style='display: inline; float: right;' title='{% trans "Remove row" %}'>
