fixes navbar-layout shift with narrow dollar-sign

--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -91,7 +91,7 @@
     {% if part.salable and roles.sales_order.view %}
     <li class='list-group-item {% if tab == "sales-prices" %}active{% endif %}' title='{% trans "Sales Price Information" %}'>
         <a href='{% url "part-sale-prices" part.id %}'>
-            <span class='menu-tab-icon fas fa-dollar-sign'></span>
+            <span class='menu-tab-icon fas fa-dollar-sign' style='width: 20px;'></span>
             {% trans "Sale Price" %}
         </a>
     </li>
