fixes calendar not rendering when toggling view

--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -141,9 +141,11 @@ $('#view-calendar').click(function() {
     $(".columns-right").hide();
     $(".search").hide();
     $('#filter-list-salesorder').hide();
-    
+
     $("#sales-order-calendar").show();
     $("#view-list").show();
+
+    calendar.render();
 });
 
 $("#view-list").click(function() {
