--- a/InvenTree/order/templates/order/purchase_orders.html
+++ b/InvenTree/order/templates/order/purchase_orders.html
@@ -146,6 +146,8 @@ $('#view-calendar').click(function() {
     
     $("#purchase-order-calendar").show();
     $("#view-list").show();
+
+    calendar.render();
 });
 
 $("#view-list").click(function() {
