--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -4,20 +4,20 @@
 
 {% block pre_form_content %}
 
-<table class='table table-striped table-condensed'>
+<table class='table table-striped table-condensed table-price-two'>
     <tr>
         <td><b>{% trans 'Part' %}</b></td>
-        <td colspan='2'>{{ part  }}</td>
+        <td>{{ part  }}</td>
     </tr>
     <tr>
         <td><b>{% trans 'Quantity' %}</b></td>
-        <td colspan='2'>{{ quantity }}</td>
+        <td>{{ quantity }}</td>
     </tr>
 </table>
 
 {% if part.supplier_count > 0 %}
     <h4>{% trans 'Supplier Pricing' %}</h4>
-    <table class='table table-striped table-condensed'>
+    <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_buy_price %}
     <tr>
         <td><b>{% trans 'Unit Cost' %}</b></td>
@@ -43,7 +43,7 @@
 
 {% if part.bom_count > 0 %}
     <h4>{% trans 'BOM Pricing' %}</h4>
-    <table class='table table-striped table-condensed'>
+    <table class='table table-striped table-condensed table-price-three'>
     {% if min_total_bom_price %}
     <tr>
         <td><b>{% trans 'Unit Cost' %}</b></td>
@@ -76,14 +76,14 @@
 
 {% if total_part_price %}
     <h4>{% trans 'Sale Price' %}</h4>
-    <table class='table table-striped table-condensed'>
+    <table class='table table-striped table-condensed table-price-two'>
         <tr>
             <td><b>{% trans 'Unit Cost' %}</b></td>
-            <td colspan='2'>{% include "price.html" with price=unit_part_price %}</td>
+            <td>{% include "price.html" with price=unit_part_price %}</td>
         </tr>
         <tr>
             <td><b>{% trans 'Total Cost' %}</b></td>
-            <td colspan='2'>{% include "price.html" with price=total_part_price %}</td>
+            <td>{% include "price.html" with price=total_part_price %}</td>
         </tr>
     </table>
 {% endif %}
