adding custom action button save the changes to the db and return success-json

--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -411,6 +411,9 @@ function setupCallbacks() {
                     line_item: pk,
                     quantity: row.quantity,
                 },
+                buttons: [{name: 'update_price',
+                    title: '{% trans "Update Unit Price" %}'},],
+                success: reloadTable,
             }
         );
     });
